[package]
name = "metfor"
version = "0.6.0"
edition = "2018"

authors = ["Ryan Leach <clumsycodemonkey@gmail.com>"]
description = """Meteorological formulas and constants."""
repository = "https://github.com/rnleach/metfor.git"
readme = "README.md"
license-file = "LICENSE"
exclude = ["**/*.rs.bk",".gitignore",".vscode/**/*"]
categories = ["science"]
keywords = ["weather","meteorology"]

[features]
default = []
use_optional = ["optional"]

[dependencies]
optional = { version = "0.5.0", optional = true }
