[package]
name = "metfor"
version = "0.7.4"
edition = "2018"

authors = ["Ryan <rnleach@users.noreply.github.com>"]
description = """Meteorological formulas and constants."""
repository = "https://github.com/rnleach/metfor.git"
readme = "README.md"
license-file = "LICENSE"
exclude = ["**/*.rs.bk",".gitignore",".vscode/**/*"]
categories = ["science"]
keywords = ["weather","meteorology"]

[features]
default = []
use_optional = ["optional"]
use_serde = ["serde", "serde_derive"]

[dependencies]
optional = { version = "0.5.0", optional = true }
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
